Fix issue with SVG sizing on mobile browsers.
Found a weird issue where there was significant whitespace
that was being added around the SVG element. After doing
some research, the answer seems to be to set the container
element around the SVG to a size that fits the SVG element.

- Add new map id element with specific height.
- With media queries, set smaller height on map id element.

References:
- http://davidsbigthoughts.blogspot.com/2011/11/chrome-and-safari-headaches-with-svg.html
- http://thatemil.com/blog/2014/04/06/intrinsic-sizing-of-svg-in-responsive-web-design/

--- a/client/stylesheets/all.less
+++ b/client/stylesheets/all.less
@@ -242,6 +242,10 @@ div.logo {
   border-top-left-radius: 5px;
 }
 
+#map {
+  height: 590px;
+}
+
 #mobile-nav-items {
   background-color: rgb(253, 243, 248);
   display: none;
@@ -290,6 +294,8 @@ div.logo {
       line-height: .5em;
     }
     #desktop-nav { display: none !important; }
+
+    #map { height: 300px; }
 
     #menu-toggle { display: block; }
 }
